게시판 만들기 완료

--- a/mysite02/src/main/webapp/assets/css/board.css
+++ b/mysite02/src/main/webapp/assets/css/board.css
@@ -128,7 +128,7 @@ a.del	{
 	display:block;
 	width:20px;
 	height:20px; 
-	background:url("/mysite2/assets/images/recycle.png") no-repeat 0 0;
+	background:url("/mysite02/assets/images/recycle.png") no-repeat 0 0;
 	font-size:0;
 }
 
@@ -143,6 +143,13 @@ div.pager  ul {
 	height:20px;
 	margin:10px auto;
 }
+
+a.disabled {
+  pointer-events: none;
+  cursor: default;
+  color: silver;
+}
+
 div.pager  ul li 			{ color:#ddd; display:inline-block; margin:5px 0; width:20px ; font-weight:bold; }
 div.pager  ul li.selected	{ font-size:16px; text-decoration: underline; color:#f40808 }
 div.pager  ul li a,
